[package]
name = "deadbeef-rust-plugin"
version = "0.1.0"
rust-version = "1.64"
edition = "2021"
authors = ["Nicolai Syvertsen <saivert@saivert.com>"]
categories = ["api-bindings", "multimedia"]
description = "Pipewire plugin for DeadBeef"
repository = "https://github.com/saivert/ddb_output_pw_rust"
license = "GPL"
readme = "README.md"
homepage = "https://saivert.com"
keywords = ["ffi", "deadbeef", "multimedia", "audio"]

[lib]
crate-type = ["cdylib"]

[dependencies]
deadbeef-sys = {path = "../deadbeef-sys"}
lossycstring = {path = "../lossycstring"}
#pipewire = {git = "https://gitlab.freedesktop.org/saivert/pipewire-rs", branch = "misc_fixes", features = ["v0_3_44"]}
#libspa-sys = {git = "https://gitlab.freedesktop.org/saivert/pipewire-rs", branch = "misc_fixes"}
pipewire = {version = "0.8", features = ["v0_3_49"]}
libspa-sys = "0.8"

once_cell = "1.18.0"