[package]
name = "deadbeef-rust-plugin"
description = "Pipewire plugin for DeadBeef"
keywords = ["ffi", "deadbeef", "multimedia", "audio"]
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true

[lib]
name = "ddb_output_pw_rust"
crate-type = ["cdylib"]

[dependencies]
deadbeef-sys = {path = "../deadbeef-sys"}
lossycstring = {path = "../lossycstring"}
#pipewire = {git = "https://gitlab.freedesktop.org/saivert/pipewire-rs", branch = "misc_fixes", features = ["v0_3_44"]}
#libspa-sys = {git = "https://gitlab.freedesktop.org/saivert/pipewire-rs", branch = "misc_fixes"}
pipewire = {version = "0.8", features = ["v0_3_49"]}
libspa-sys = "0.8"

once_cell = "1.18.0"
